# solana-superior-randomness

./: .gitignore  Anchor.toml  LICENSE  Makefile  README.md  measurement.txt  package.json  pnpm-lock.yaml  sample.env
programs/01_super-simple-randomness/: Cargo.toml
programs/01_super-simple-randomness/src/: ed25519.rs  lib.rs
programs/01_super-simple-randomness/src/instructions/: mod.rs  request.rs  reveal.rs  seed.rs
scripts/: meter.ts  superior-flip.ts  update-measurement.ts  utils.ts
switchboard-function/: Cargo.toml  Dockerfile  README.md
switchboard-function/src/: lib.rs  main.rs  params.rs
tests/: scheduled-lottery-request.test.ts  super-simple-randomness.test.ts  utils.ts
