[workspace]

[package]
name = "solana-lottery-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-lottery-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
# switchboard-solana = { version = "0.28.29", path = "../../sbv3/rust/switchboard-solana" }
switchboard-solana = "=0.28.33"
bytemuck = "1.13"
